[gd_scene load_steps=15 format=3 uid="uid://c8qewsbd3uidy"]

[ext_resource type="Script" path="res://examples/audio_sync_player_nodes/demo.gd" id="1_0qy6e"]
[ext_resource type="PackedScene" uid="uid://ipj2rlobd2ia" path="res://examples/audio_sync_player_nodes/visualizer.tscn" id="1_3ldds"]
[ext_resource type="AudioStream" uid="uid://b7e3nhsxjfnnn" path="res://examples/audio_sync_player_nodes/stream.ogg" id="2_qqi3r"]
[ext_resource type="Script" path="res://examples/audio_sync_player_nodes/audio_sync_logging.gd" id="3_7ktwq"]
[ext_resource type="AudioStream" uid="uid://b04fcbj1ug71e" path="res://examples/audio_sync_player_nodes/stream_1.ogg" id="4_55bib"]
[ext_resource type="AudioStream" uid="uid://dvjw7tvxyfdq6" path="res://examples/audio_sync_player_nodes/stream_2.ogg" id="5_lpg6w"]
[ext_resource type="AudioStream" uid="uid://b8jr4xi6mfhgw" path="res://examples/audio_sync_player_nodes/stream_3.ogg" id="6_ge2wb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gjybd"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0, 0, 0, 0.501961)
corner_radius_top_left = 8
corner_radius_top_right = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pcnqk"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.160784, 0.376471, 0.596078, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxLine" id="StyleBoxLine_je1n3"]
color = Color(0, 0, 0, 0.501961)
thickness = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jlape"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0, 0, 0, 0.25098)
draw_center = false
border_width_left = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 0.501961)
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a4okr"]
content_margin_left = 16.0
content_margin_top = 4.0
content_margin_right = 16.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.501961)
corner_radius_top_left = 8
corner_radius_top_right = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0p4vr"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
draw_center = false
border_width_left = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 0.501961)
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxLine" id="StyleBoxLine_v34o6"]
color = Color(0, 0, 0, 0.501961)
thickness = 2

[node name="Demo" type="Node"]
script = ExtResource("1_0qy6e")

[node name="MainPlayer" type="AudioStreamPlayer" parent="." node_paths=PackedStringArray("audio_players")]
unique_name_in_owner = true
stream = ExtResource("2_qqi3r")
script = ExtResource("3_7ktwq")
audio_players = [NodePath("SubPlayer1"), NodePath("SubPlayer2"), NodePath("SubPlayer3")]

[node name="SubPlayer1" type="AudioStreamPlayer" parent="MainPlayer"]
stream = ExtResource("4_55bib")
volume_db = -6.0

[node name="SubPlayer2" type="AudioStreamPlayer" parent="MainPlayer"]
stream = ExtResource("5_lpg6w")
volume_db = -12.0

[node name="SubPlayer3" type="AudioStreamPlayer" parent="MainPlayer"]
stream = ExtResource("6_ge2wb")
volume_db = -2.0

[node name="Margin" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 96
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 96
theme_override_constants/margin_bottom = 64

[node name="Box" type="HBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="Players" type="VBoxContainer" parent="Margin/Box"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0
alignment = 1

[node name="Main" type="PanelContainer" parent="Margin/Box/Players"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gjybd")

[node name="Box" type="VBoxContainer" parent="Margin/Box/Players/Main"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="Margin/Box/Players/Main/Box"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "AudioSyncPlayer"
horizontal_alignment = 1

[node name="Controls" type="PanelContainer" parent="Margin/Box/Players/Main/Box"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pcnqk")

[node name="Box" type="VBoxContainer" parent="Margin/Box/Players/Main/Box/Controls"]
layout_mode = 2

[node name="Options" type="VBoxContainer" parent="Margin/Box/Players/Main/Box/Controls/Box"]
layout_mode = 2

[node name="Interval" type="HBoxContainer" parent="Margin/Box/Players/Main/Box/Controls/Box/Options"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Margin/Box/Players/Main/Box/Controls/Box/Options/Interval"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sync interval"

[node name="SyncInterval" type="SpinBox" parent="Margin/Box/Players/Main/Box/Controls/Box/Options/Interval"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
max_value = 4096.0
step = 0.001
value = 5.0
suffix = "s"

[node name="Threshold" type="HBoxContainer" parent="Margin/Box/Players/Main/Box/Controls/Box/Options"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Margin/Box/Players/Main/Box/Controls/Box/Options/Threshold"]
layout_mode = 2
size_flags_horizontal = 3
text = "Desync threshold"

[node name="DesyncThreshold" type="SpinBox" parent="Margin/Box/Players/Main/Box/Controls/Box/Options/Threshold"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
min_value = 0.001
max_value = 4096.0
step = 0.01
value = 0.011
exp_edit = true
suffix = "s"

[node name="HSeparator" type="HSeparator" parent="Margin/Box/Players/Main/Box/Controls/Box"]
layout_mode = 2
theme_override_constants/separation = 16
theme_override_styles/separator = SubResource("StyleBoxLine_je1n3")

[node name="Control" type="HBoxContainer" parent="Margin/Box/Players/Main/Box/Controls/Box"]
layout_mode = 2
alignment = 1

[node name="Play" type="Button" parent="Margin/Box/Players/Main/Box/Controls/Box/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
tooltip_text = "Play"
text = "▶"

[node name="Pause" type="Button" parent="Margin/Box/Players/Main/Box/Controls/Box/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
tooltip_text = "Pause"
disabled = true
toggle_mode = true
text = "❚❚"

[node name="SpinBox" type="SpinBox" parent="Margin/Box/Players/Main/Box/Controls/Box/Control"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
tooltip_text = "Pitch scale"
min_value = 0.01
max_value = 4.0
step = 0.01
value = 1.0
prefix = "x"

[node name="Playback" type="HSlider" parent="Margin/Box/Players/Main/Box/Controls/Box"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
tooltip_text = "Playback position"

[node name="Visualizer" parent="Margin/Box/Players/Main/Box" node_paths=PackedStringArray("audio_player") instance=ExtResource("1_3ldds")]
layout_mode = 2
audio_player = NodePath("../../../../../../MainPlayer")

[node name="AudioPlayers" type="PanelContainer" parent="Margin/Box/Players"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jlape")

[node name="Box" type="VBoxContainer" parent="Margin/Box/Players/AudioPlayers"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Visualizer1" parent="Margin/Box/Players/AudioPlayers/Box" node_paths=PackedStringArray("audio_player") instance=ExtResource("1_3ldds")]
layout_mode = 2
audio_player = NodePath("../../../../../../MainPlayer/SubPlayer1")

[node name="Visualizer2" parent="Margin/Box/Players/AudioPlayers/Box" node_paths=PackedStringArray("audio_player") instance=ExtResource("1_3ldds")]
layout_mode = 2
audio_player = NodePath("../../../../../../MainPlayer/SubPlayer2")

[node name="Visualizer3" parent="Margin/Box/Players/AudioPlayers/Box" node_paths=PackedStringArray("audio_player") instance=ExtResource("1_3ldds")]
layout_mode = 2
audio_player = NodePath("../../../../../../MainPlayer/SubPlayer3")

[node name="Log" type="VBoxContainer" parent="Margin/Box"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="Margin/Box/Log"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_a4okr")
text = "Synchronization Log"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Container" type="PanelContainer" parent="Margin/Box/Log"]
custom_minimum_size = Vector2(0, 360)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_0p4vr")

[node name="Box" type="VBoxContainer" parent="Margin/Box/Log/Container"]
layout_mode = 2

[node name="Cycle" type="HBoxContainer" parent="Margin/Box/Log/Container/Box"]
layout_mode = 2

[node name="Label" type="Label" parent="Margin/Box/Log/Container/Box/Cycle"]
layout_mode = 2
size_flags_horizontal = 3
text = "Next cycle"

[node name="Cycle" type="Label" parent="Margin/Box/Log/Container/Box/Cycle"]
unique_name_in_owner = true
layout_mode = 2
text = "0
"

[node name="S" type="Label" parent="Margin/Box/Log/Container/Box/Cycle"]
layout_mode = 2
text = "s"

[node name="HSeparator" type="HSeparator" parent="Margin/Box/Log/Container/Box"]
layout_mode = 2
theme_override_constants/separation = 16
theme_override_styles/separator = SubResource("StyleBoxLine_v34o6")

[node name="Log" type="TextEdit" parent="Margin/Box/Log/Container/Box"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
editable = false
autowrap_mode = 1
scroll_smooth = true
minimap_draw = true

[connection signal="sync_log" from="MainPlayer" to="." method="_on_main_player_sync_log"]
[connection signal="value_changed" from="Margin/Box/Players/Main/Box/Controls/Box/Options/Interval/SyncInterval" to="." method="_on_sync_interval_value_changed"]
[connection signal="value_changed" from="Margin/Box/Players/Main/Box/Controls/Box/Options/Threshold/DesyncThreshold" to="." method="_on_desync_threshold_value_changed"]
[connection signal="pressed" from="Margin/Box/Players/Main/Box/Controls/Box/Control/Play" to="." method="_on_play_pressed"]
[connection signal="toggled" from="Margin/Box/Players/Main/Box/Controls/Box/Control/Pause" to="." method="_on_pause_toggled"]
[connection signal="value_changed" from="Margin/Box/Players/Main/Box/Controls/Box/Control/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="value_changed" from="Margin/Box/Players/Main/Box/Controls/Box/Playback" to="." method="_on_playback_value_changed"]
